2007-06-22  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Using DocumentTag properties to guide the
	  serialization of the buffer.

2007-06-21  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Minor changes.
	* DocumentTagTable.cs: Using DocumentTag to define the tags used in the
	  editor, and toggle if they are elements, attributes or has text
	  child nodes.
	* DocumentTag.cs: By default DocumentTags are non Editable.

2007-06-21  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Minor changes.
	* Monodoc.Editor.Gui.mdp, DocumentTag.cs: Added DocumentTag class that
	  inherits from TextTag. It implements some properties that tells if
	  the tag represents an element, an attribute or is a text element.

2007-06-21  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Continue with the implementation of the
	  Serialize method. Changed some part of the Deserialize so that
	  extra characters are enclosed in a "ignore" Tag.

2007-06-20  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Modified the main Deserialize method,
	  added some #if #endif for debugging purposes, relocated some code
	  to the DeserializeAttributes that applies the attributes tag to the
	  buffer.
	* DocumentTagTable.cs: Added some properties to some tags to make
	  easier to see changes in code.
	* gtk-gui/gui.stetic: Minor changes.

2007-06-19  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Created specific methods to handle the
	  attributes of differentes elements. Added some temp debug stuff.
	* Monodoc.Editor.Gui.mdp: Added pango-sharp to the references of the
	  project.
	* DocumentTagTable.cs: Added more attribute related tags.

2007-06-18  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* ChangeLog: Added Changelog for widget library.
