@@ -23,6 +23,9 @@
     <File name="./DocumentTagTable.cs" subtype="Code" buildaction="Compile" />
     <File name="./DocumentBufferArchiver.cs" subtype="Code" buildaction="Compile" />
     <File name="./DocumentTag.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Test" subtype="Directory" buildaction="Compile" />
+    <File name="./Test/Examples" subtype="Directory" buildaction="Compile" />
+    <File name="./Test/Examples/WrapMode.xml" subtype="Code" buildaction="Nothing" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -31,6 +34,7 @@
     <ProjectReference type="Gac" localcopy="True" refto="Mono.Posix, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
     <ProjectReference type="Gac" localcopy="True" refto="System.Xml, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <ProjectReference type="Gac" localcopy="True" refto="pango-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="nunit.framework, Version=2.2.9.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77" />
   </References>
   <GtkDesignInfo partialTypes="True" isWidgetLibrary="True">
     <ExportedWidgets>
